# rounders

./: .gitignore  README.md  config.py  create_tables.py  pyproject.toml  requirements.txt  rounders.py  wsgi.py
database/: README.md  __init__.py  api.py  database.py
example/: example.db
rounders/: __init__.py  auth.py  blogs.py  formatting.py  models.py  routes.py
rounders/static/favicons/: site.webmanifest
rounders/static/scripts/: script.js
rounders/static/styles/: style.css
rounders/templates/: base.html  macros.html
rounders/templates/login/: index.html
rounders/templates/matches/: edit.html  list.html
rounders/templates/photos/: list.html
rounders/templates/rules/: index.html
rounders/templates/teams/: create.html  edit.html  team.html
server/: __init__.py  api.py  auth.py  formatting.py  models.py  posts.py  routes.py
server/static/favicons/: browserconfig.xml
server/static/scripts/: script.js  teams.js
server/static/styles/: style.css
server/templates/: base.html  macros.html
server/templates/about/: index.html
server/templates/home/: index.html
server/templates/login/: index.html
server/templates/matches/: create.html  edit.html  index.html  list.html  list_grouped.html
server/templates/partials/: match_table.html  team_table.html
server/templates/photos/: index.html
server/templates/rules/: index.html
server/templates/teams/: create.html  edit.html  index.html  table.html  team.html
